# account-rs

./: .gitignore  Cargo.toml  README.md
migrations/2023-09-29-121456_create_accounts/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
