[package]
name = "account-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1.32.0", features = ["macros", "rt-multi-thread"]}
axum = {version = "0.6.20", features = ["headers", "macros"]}
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2.1.2", features = ["postgres"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
#tower-http = {version = "0.4.4", features=["full"]}
